chore: update CI configuration for PostgreSQL health checks and improve readiness logic

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    
+
     services:
       postgres:
         image: postgres:18-alpine
@@ -18,13 +18,11 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: authly_test
-        ports:
-          - 5432:5432
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 5s
+          --health-timeout 3s
+          --health-retries 10
 
     steps:
       - name: Checkout code
@@ -37,32 +35,28 @@ jobs:
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          restore-keys: ${{ runner.os }}-go-
 
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
           go-version: '1.25.4'
-          cache-dependency-path: go.sum
-
-      - name: Install dependencies
-        run: go mod download
+          cache: true
 
       - name: Create CI config file
         run: |
           cat > config.ci.yaml << EOF
           app:
             name: "authly"
-          
+
           server:
             host: "0.0.0.0"
             port: 8000
-          
+
           auth:
             keys_path: "keys"
             active_kid: "main"
-          
+
           database:
             host: localhost
             port: 5432
@@ -70,7 +64,7 @@ jobs:
             password: "postgres"
             dbname: "authly_test"
             sslmode: "disable"
-          
+
           logging:
             level: "info"
           EOF
@@ -78,16 +72,15 @@ jobs:
       - name: Create keys directory
         run: mkdir -p keys
 
-      - name: Install PostgreSQL client
-        run: sudo apt-get update && sudo apt-get install -y postgresql-client
-
       - name: Wait for PostgreSQL
         run: |
-          until pg_isready -h localhost -p 5432 -U postgres; do
-            echo "Waiting for PostgreSQL..."
-            sleep 2
+          for i in {1..20}; do
+            if pg_isready -h localhost -p 5432 -U postgres; then
+              echo "PostgreSQL is ready"; exit 0;
+            fi
+            echo "Waiting for PostgreSQL... $i"; sleep 1;
           done
-          echo "PostgreSQL is ready!"
+          echo "PostgreSQL did not become ready in time"; exit 1
 
       - name: Run go vet
         run: go vet ./...
@@ -100,7 +93,7 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
-            token: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   build:
     name: Build
@@ -109,7 +102,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Cache Go modules and build cache
         uses: actions/cache@v4
@@ -118,21 +111,16 @@ jobs:
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          restore-keys: ${{ runner.os }}-go-
 
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
           go-version: '1.25.4'
-          cache-dependency-path: go.sum
-
-      - name: Install dependencies
-        run: go mod download
+          cache: true
 
       - name: Build
         run: go build -v ./...
 
       - name: Build binary
         run: go build -o bin/authly ./cmd/main.go
-
