feat(release): update GitHub Actions workflow to include permissions for writing contents and reading packages

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ jobs:
   release:
     name: Build and Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: read
     
     steps:
       - name: Checkout code
@@ -93,6 +96,4 @@ jobs:
             - Checksum: `authly-${{ steps.version.outputs.version }}-linux-amd64.tar.gz.sha256`
           draft: false
           prerelease: ${{ contains(steps.version.outputs.version, '-rc') || contains(steps.version.outputs.version, '-beta') || contains(steps.version.outputs.version, '-alpha') }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
