chore(ci): update CI workflow to trigger on changes in the backend directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,12 @@ name: CI
 on:
   push:
     branches: [ main, develop, ci ]
+    paths:
+      - 'backend/**'
   pull_request:
     branches: [ main, develop ]
+    paths:
+      - 'backend/**'
 
 jobs:
   test:
