chore: update frontend package.json to use bun for script commands and add formatting script

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
+    "dev": "bunx next dev --turbopack",
+    "build": "bunx next build",
+    "start": "bunx next start",
+    "lint": "bunx eslint .",
+    "lint:fix": "bunx eslint --fix .",
+    "format": "bunx prettier --write ."
+},
   "dependencies": {
     "next": "16.0.10",
     "react": "19.2.1",
