--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "lint": "bunx eslint .",
     "lint:fix": "bunx eslint --fix .",
     "format": "bunx prettier --write ."
-},
+  },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
