--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\" --config .prettierc.json"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "next": "16.0.10",
     "react": "19.2.1",
