--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -1,4 +1,4 @@
-name: CI
+name: ci-backend
 
 on:
   push:
@@ -14,6 +14,9 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
     
     services:
       postgres:
@@ -40,7 +43,7 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFiles('backend/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
@@ -48,7 +51,7 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version: '1.25.4'
-          cache-dependency-path: go.sum
+          cache-dependency-path: backend/go.sum
 
       - name: Install dependencies
         run: go mod download
@@ -106,6 +109,9 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     needs: test
+    defaults:
+      run:
+        working-directory: backend
 
     steps:
       - name: Checkout code
@@ -119,7 +125,7 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFiles('backend/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
@@ -127,13 +133,14 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version: '1.25.4'
-          cache-dependency-path: go.sum
+          cache-dependency-path: backend/go.sum
 
       - name: Install dependencies
         run: go mod download
 
       - name: Determine version
         id: version
+        shell: bash
         run: |
           # Try to get version from tag if available, otherwise use dev
           if [ -n "${{ github.ref }}" ] && [[ "${{ github.ref }}" == refs/tags/* ]]; then
@@ -153,12 +160,14 @@ jobs:
 
       - name: Get build time
         id: build_time
+        shell: bash
         run: |
           BUILD_TIME=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
           echo "build_time=${BUILD_TIME}" >> $GITHUB_OUTPUT
 
       - name: Get git commit
         id: git_commit
+        shell: bash
         run: |
           GIT_COMMIT=$(git rev-parse --short HEAD 2>/dev/null || echo "unknown")
           echo "git_commit=${GIT_COMMIT}" >> $GITHUB_OUTPUT
@@ -166,16 +175,15 @@ jobs:
       - name: Build
         run: |
           go build -ldflags "\
-            -X github.com/Anvoria/authly/cmd.Version=${{ steps.version.outputs.version }} \
-            -X github.com/Anvoria/authly/cmd.BuildTime=${{ steps.build_time.outputs.build_time }} \
-            -X github.com/Anvoria/authly/cmd.GitCommit=${{ steps.git_commit.outputs.git_commit }}" \
+            -X main.Version=${{ steps.version.outputs.version }} \
+            -X main.BuildTime=${{ steps.build_time.outputs.build_time }} \
+            -X main.GitCommit=${{ steps.git_commit.outputs.git_commit }}" \
             -v ./...
 
       - name: Build binary
         run: |
           go build -ldflags "\
-            -X github.com/Anvoria/authly/cmd.Version=${{ steps.version.outputs.version }} \
-            -X github.com/Anvoria/authly/cmd.BuildTime=${{ steps.build_time.outputs.build_time }} \
-            -X github.com/Anvoria/authly/cmd.GitCommit=${{ steps.git_commit.outputs.git_commit }}" \
+            -X main.Version=${{ steps.version.outputs.version }} \
+            -X main.BuildTime=${{ steps.build_time.outputs.build_time }} \
+            -X main.GitCommit=${{ steps.git_commit.outputs.git_commit }}" \
             -o bin/authly ./cmd/main.go
-
