--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "start": "bunx next start",
     "lint": "bunx eslint .",
     "lint:fix": "bunx eslint --fix .",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\" --config .prettierc.json"
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\" --config .prettierrc.json"
   },
   "dependencies": {
     "axios": "^1.13.2",
