--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-syntax-highlighter": "^16.1.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
@@ -24,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "prettier": "^3.7.4",
